// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> renders Login page 1`] = `
<section
  className="Auth"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        email
      </label>
      <input
        className="InputElement"
        name="email"
        onChange={[Function]}
        placeholder="you@email.com"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        password
      </label>
      <input
        className="InputElement"
        name="password"
        onChange={[Function]}
        placeholder="Enter you password..."
        required={true}
        type="password"
        value=""
      />
    </div>
    <button
      className="LoginFormButton LoginFormButtonDisabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </form>
</section>
`;

exports[`<Login /> updates email form state on input change 1`] = `
<section
  className="Auth"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        email
      </label>
      <input
        className="InputElement"
        name="email"
        onChange={[Function]}
        placeholder="you@email.com"
        required={true}
        type="email"
        value="test@test.com"
      />
    </div>
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        password
      </label>
      <input
        className="InputElement"
        name="password"
        onChange={[Function]}
        placeholder="Enter you password..."
        required={true}
        type="password"
        value=""
      />
    </div>
    <button
      className="LoginFormButton LoginFormButtonDisabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </form>
</section>
`;

exports[`<Login /> updates password form state on input change 1`] = `
<section
  className="Auth"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        email
      </label>
      <input
        className="InputElement"
        name="email"
        onChange={[Function]}
        placeholder="you@email.com"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="Input"
    >
      <label
        className="Label"
      >
        password
      </label>
      <input
        className="InputElement"
        name="password"
        onChange={[Function]}
        placeholder="Enter you password..."
        required={true}
        type="password"
        value="12345678"
      />
    </div>
    <button
      className="LoginFormButton LoginFormButtonDisabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </form>
</section>
`;
